Tutoria amb Manel

--- a/EjercicioCiclosFragmentos/app/src/main/res/layout/activity_main.xml
+++ b/EjercicioCiclosFragmentos/app/src/main/res/layout/activity_main.xml
@@ -20,21 +20,18 @@
     </fragment>
 
     <FrameLayout
+        android:id="@+id/fragment_nivell"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
 
-
-
-
     </FrameLayout>
 
         <FrameLayout
+            android:id="@+id/fragment_llistat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
-
-
     </FrameLayout>
 
 
